--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,61 @@ body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.fixed{
+    display:flex;
+}
+
+.logo {
+    width: 67px;
+    height: 67px;
+    background-color: #11749e;
+    box-shadow: 10px 10px #fff;
+    margin-top: 22px;
+    float:left;
+    margin-left:20px;
+}
+    .logo p{
+        font-size: 1.875em;
+        color: #fff;
+        padding: 24px 12px;
+    }
+    .socials {
+        float: right;
+        margin-top: 22px;
+        padding: 20px;
+        font-size: 0.95em;
+        margin-right: 10px;
+    }
+    .socials i{
+        padding:0 10px;
+    }
+    .socials a:hover i{
+        color: #11749e;
+    }
+nav{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}	
+    nav ul {
+        display: flex;
+    }
+    nav a{
+        color: #fff !important;
+    }
+    nav li{
+            border-bottom: 6px solid transparent;
+    }
+    nav li a{
+        float: right;
+        padding: 40px 15px;
+        line-height: 30px;
+        border-bottom: 6px solid transparent;
+        font-weight: 500;
+        color: #fff;
+        font-size: 1.25em;
+    }
+    nav li:hover{
+        border-bottom: 6px solid #11749e;
+    }
