--- a/style/style.css
+++ b/style/style.css
@@ -55,10 +55,10 @@ nav{
     nav a{
         color: #fff !important;
     }
-    nav li{
+    nav a{
             border-bottom: 6px solid transparent;
     }
-    nav li a{
+    nav a{
         float: right;
         padding: 40px 15px;
         line-height: 30px;
@@ -67,6 +67,6 @@ nav{
         color: #fff;
         font-size: 1.25em;
     }
-    nav li:hover{
+    nav a:hover{
         border-bottom: 6px solid #11749e;
     }
