--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,12 @@ header{
     background: url(../img/1.jpg) no-repeat center top / cover;
 
 }
+header {
+	background: url(../img/1.jpg) no-repeat center top / cover;
+	background-attachment: fixed; /*прокручивание фона отключено*/
+	width: 100%;
+    height: 100vh; /*высота*/
+}
 body{
     padding: 0;
     margin: 0;
