--- a/style/style.css
+++ b/style/style.css
@@ -61,9 +61,7 @@ nav{
     nav a{
         color: #fff !important;
     }
-    nav a{
-            border-bottom: 6px solid transparent;
-    }
+
     nav a{
         float: right;
         padding: 40px 15px;
@@ -72,6 +70,7 @@ nav{
         font-weight: 500;
         color: #fff;
         font-size: 1.25em;
+        text-decoration: none;
     }
     nav a:hover{
         border-bottom: 6px solid #11749e;
