--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ nav{
         font-weight: 500;
         color: #fff;
         font-size: 1.25em;
-        text-decoration: none;
+        text-decoration: none;/*подчеркивание убрали*/
     }
     nav a:hover{
         border-bottom: 6px solid #11749e;
