--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-header{
-    background: url(../img/1.jpg) no-repeat center top / cover;
-
-}
 header {
 	background: url(../img/1.jpg) no-repeat center top / cover;
 	background-attachment: fixed; /*прокручивание фона отключено*/
@@ -14,10 +10,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.fixed{
-    display:flex;
-}
-
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -28,14 +20,15 @@ body{
     height: 67px;
     background-color: #11749e;
     box-shadow: 10px 10px #fff;
-    margin-top: 22px;
-    float:left;
+    margin-top: 20px;
+    float: left;
     margin-left:20px;
 }
     .logo p{
         font-size: 1.875em;
         color: #fff;
-        padding: 24px 12px;
+        padding: 17px 12px;
+        margin: 0px 0px;
     }
     .socials {
         float: right;
@@ -50,28 +43,30 @@ body{
     .socials a:hover i{
         color: #11749e;
     }
-nav{
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-}	
-    nav ul {
-        display: flex;
-    }
-    nav a{
-        color: #fff !important;
-    }
 
-    nav a{
-        float: right;
-        padding: 40px 15px;
-        line-height: 30px;
-        border-bottom: 6px solid transparent;
-        font-weight: 500;
-        color: #fff;
-        font-size: 1.25em;
-        text-decoration: none;/*подчеркивание убрали*/
-    }
-    nav a:hover{
-        border-bottom: 6px solid #11749e;
-    }
+nav{
+    float: right;   
+}
+nav ul {
+    display: block;
+    padding: 0;
+    margin: 0;
+}
+
+nav  li{
+    float: left;
+    display: block;
+    text-decoration: none;/*подчеркивание убрали*/
+    padding: 50px 0px;
+}
+
+nav a{
+    padding: 65px 30px;
+    font-weight: 500;
+    color: #fff;
+    font-size: 1.25em;
+    text-decoration: none;/*подчеркивание убрали*/
+}
+nav a:hover{
+    border-bottom: 6px solid #11749e;
+}
