--- a/style/style.css
+++ b/style/style.css
@@ -9,10 +9,15 @@ body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+.fixed1{
+    margin: -65px;
+    border-bottom: 2px solid #707172;
+}
 
 .container {
 	max-width: 1200px;
-	margin: 0 auto;
+    margin: 0 auto;
+    
 }
 
 .logo {
@@ -51,22 +56,42 @@ nav ul {
     display: block;
     padding: 0;
     margin: 0;
+    
 }
 
-nav  li{
+nav li{
     float: left;
     display: block;
     text-decoration: none;/*подчеркивание убрали*/
     padding: 50px 0px;
 }
 
-nav a{
+nav li a{
     padding: 65px 30px;
     font-weight: 500;
     color: #fff;
     font-size: 1.25em;
     text-decoration: none;/*подчеркивание убрали*/
 }
-nav a:hover{
+nav li a:hover{
     border-bottom: 6px solid #11749e;
+}
+
+.slide {
+    text-align: center;
+    color: white;
+    margin-top: 17%;
+}
+.slide h2 {
+    font-size: 9.75em;
+    text-transform: uppercase;/*Большие буквы*/
+    font-weight: 600; /*Жирность*/
+    margin-bottom: 40px;/*Отступ снизу*/
+}
+.slide p {
+    font-size: 1.5625em;
+    color: #11749e;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+    padding-left: 20px;
 }
