--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ body{
 }
 .fixed1{
     margin: -65px;
-    border-bottom: 2px solid #707172;
+    border-bottom: 2px solid #757575;
 }
 
 .container {
@@ -92,6 +92,25 @@ nav li a:hover{
     font-size: 1.5625em;
     color: #11749e;
     text-transform: uppercase;
-    letter-spacing: 20px;
+    letter-spacing: 20px;/*Разбег между буквами*/
     padding-left: 20px;
+}
+.about{
+    height:620px;
+    background-color: #11749e;
+    text-align: center;
+    color: #fff;
+    padding-top: 150px;
+}
+
+.heading span{
+    font-size: 18.125em;
+    opacity: 0.1;
+    font-weight: bold;
+    font-stretch: condensed;
+}
+.heading h2{
+    font-size: 2.3125em;
+    text-transform: uppercase;
+    margin: -80px 0 80px 0;
 }
