--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ header {
 	background: url(../img/1.jpg) no-repeat center top / cover;
 	background-attachment: fixed; /*прокручивание фона отключено*/
 	width: 100%;
-    height: 100vh; /*высота*/
+    height: 120vh; /*высота*/
 }
 body{
     padding: 0;
@@ -96,21 +96,86 @@ nav li a:hover{
     padding-left: 20px;
 }
 .about{
-    height:620px;
+    height:100vh;
     background-color: #11749e;
     text-align: center;
     color: #fff;
     padding-top: 150px;
+}
+.scroll {
+    /*margin-top: 180px;*/
+        position: absolute;
+        bottom: 10px;
+        margin: 0 auto;
+        left: 46.4%;
+}
+.scroll span {
+    font-size: 0.8em;
+}
+.scroll i{
+    display: block;
+    padding: 20px;
+    border: 1px solid;
+    border-radius: 50%;
+    width: 20px;
+    margin: 20px auto;
+}
+.scroll a:hover i{
+    border-color: #11749e;
+    color: #11749e;
+}
+
+.about{
+    height:100vh;
+    background-color: #11749e;
+    text-align: center;
+    color: #fff;
+    padding-top: 20px;
 }
 
 .heading span{
     font-size: 18.125em;
     opacity: 0.1;
     font-weight: bold;
-    font-stretch: condensed;
+    font-stretch: condensed;/*узость начертания*/
 }
 .heading h2{
     font-size: 2.3125em;
-    text-transform: uppercase;
-    margin: -80px 0 80px 0;
+    text-transform: uppercase; /*Большими буквами*/
+    margin: -160px 0 80px 0;
+}
+
+.features{
+    margin-top: 100px;
+}
+
+.feature {
+    float: left;
+    width: 25%;
+}
+
+.feature-img {
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.2);
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+}
+
+.feature-img img{
+    padding: 55px;
+}
+
+.feature-img:hover{        
+    opacity: 0.5;/*уровень прозрачности*/
+}
+
+.feature h3{
+    font-size: 1.125em;
+    padding: 20px;
+}
+
+.feature p{
+    text-align: justify;
+    margin: 0 7%;
 }
