--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,13 @@
 header {
-	background: url(../img/1.jpg) no-repeat center top / cover;
+	background: url(../img/1.jpg) no-repeat center top / cover;/*фоновая картинка неподвижная на весь экран*/
 	background-attachment: fixed; /*прокручивание фона отключено*/
-	width: 100%;
+	width: 100%; /*ширина*/
     height: 120vh; /*высота*/
 }
 body{
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;/*Стиль шрифта*/
 }
 .fixed1{
     margin: -65px;
@@ -30,7 +30,7 @@ body{
     margin-left:20px;
 }
     .logo p{
-        font-size: 1.875em;
+        font-size: 1.875em;/*размер объекта*/
         color: #fff;
         padding: 17px 12px;
         margin: 0px 0px;
@@ -74,50 +74,41 @@ nav li a{
     text-decoration: none;/*подчеркивание убрали*/
 }
 nav li a:hover{
-    border-bottom: 6px solid #11749e;
+    border-bottom: 6px solid #11749e;/*нижнее подчерикание при наведении*/
 }
 
 .slide {
+    margin-top: 35vh; 
     text-align: center;
     color: white;
-    margin-top: 17%;
 }
 .slide h2 {
-    font-size: 9.75em;
+    font-size: 9.75em;/*размер объекта*/
     text-transform: uppercase;/*Большие буквы*/
     font-weight: 600; /*Жирность*/
-    margin-bottom: 40px;/*Отступ снизу*/
+    margin-bottom: 20px;/*Отступ снизу*/
 }
 .slide p {
-    font-size: 1.5625em;
+    font-size: 1.5625em;/*размер объекта*/
     color: #11749e;
     text-transform: uppercase;
     letter-spacing: 20px;/*Разбег между буквами*/
     padding-left: 20px;
-}
-.about{
-    height:100vh;
-    background-color: #11749e;
-    text-align: center;
-    color: #fff;
-    padding-top: 150px;
+    margin-bottom: 120px;/*Отступ снизу*/
 }
 .scroll {
-    /*margin-top: 180px;*/
-        position: absolute;
-        bottom: 10px;
-        margin: 0 auto;
-        left: 46.4%;
+    margin: 0 auto;
 }
-.scroll span {
+.scroll span { 
     font-size: 0.8em;
 }
 .scroll i{
     display: block;
     padding: 20px;
     border: 1px solid;
-    border-radius: 50%;
+    border-radius: 70%;
     width: 20px;
+    height: 20px;
     margin: 20px auto;
 }
 .scroll a:hover i{
@@ -134,36 +125,36 @@ nav li a:hover{
 }
 
 .heading span{
-    font-size: 18.125em;
-    opacity: 0.1;
-    font-weight: bold;
+    font-size: 18.125em;/*размер объекта*/
+    opacity: 0.1;/*прозрачность*/
+    font-weight: bold; /*стиль ширфта*/
     font-stretch: condensed;/*узость начертания*/
 }
 .heading h2{
-    font-size: 2.3125em;
+    font-size: 2.3125em;/*размер объекта*/
     text-transform: uppercase; /*Большими буквами*/
-    margin: -160px 0 80px 0;
+    margin: -160px 0 80px 0;/*внешние отступы*/
 }
 
 .features{
-    margin-top: 100px;
+    margin-top: 100px;/*внешние отступы сверху*/
 }
 
 .feature {
-    float: left;
-    width: 25%;
+    float: left;/*расположение объекта на странице*/
+    width: 25%;/*ширина объекта*/
 }
 
 .feature-img {
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.2);
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
+    border-radius: 50%;/*радиус округления*/
+    background-color: rgba(255, 255, 255, 0.2);/*цвет фона*/
+    width: 150px;/*ширина объекта*/
+    height: 150px;/*высота объекта*/
+    margin: 0 auto;/*центрировать*/
 }
 
 .feature-img img{
-    padding: 55px;
+    padding: 55px;/*внутренние отступы*/
 }
 
 .feature-img:hover{        
@@ -171,11 +162,11 @@ nav li a:hover{
 }
 
 .feature h3{
-    font-size: 1.125em;
-    padding: 20px;
+    font-size: 1.125em;/*размер объекта*/
+    padding: 20px;/*внутренние отступы*/
 }
 
 .feature p{
-    text-align: justify;
-    margin: 0 7%;
+    text-align: center;/*расположение текста*/
+    margin: 0 7%;/*внешние отступы*/
 }
