--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,10 @@ nav li a:hover{
     text-align: center;/*расположение текста*/
     margin: 0 7%;/*внешние отступы*/
 }
+
+
+
+
 .left{
 	float:left;
 	width:50%;
@@ -193,7 +197,7 @@ nav li a:hover{
 		.news .news-img1{
 			width: 100%;
 			height: 100%;
-			background:url('/creatives/img/news-1.jpg') no-repeat;
+			background:url('../img/news-1.jpg') no-repeat;
 			background-size: cover;
 			-webkit-transition-duration: 2s;
 		    -o-transition-duration: 2s;
@@ -203,7 +207,7 @@ nav li a:hover{
 		.news-img2{
 			width: 100%;
 			height: 100%;
-			background:url('/creatives/img/news-2.jpg') no-repeat;
+			background:url('../img/news-2.jpg') no-repeat;
 			background-size: cover;
 			-webkit-transition-duration: 2s;
 		    -o-transition-duration: 2s;
