--- a/style/style.css
+++ b/style/style.css
@@ -227,3 +227,55 @@ nav li a:hover{
     line-height: 2;/*Устанавливает межстрочный интервал текста*/
     height: 210px;/*высота*/
 }
+.blogs{
+    text-align: center;
+    padding-top: 200px;
+    background-color: #fff;
+    height:900px;
+    padding-bottom: 1%;
+}
+.blogs .heading h2 {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    margin: -123px 0 123px 0;
+}
+
+.blogs .heading h3 {
+    font-size: 2.1875em;
+    font-stretch: condensed;
+    letter-spacing: 5px;
+    padding: 2% 1% 0 1%;
+}
+
+    
+.blog{
+    display: flex;
+    justify-content: space-around;
+}
+
+.blog-section {
+    float: left;
+    width: 23%;
+    margin: 50px 5px 0 5px;
+}
+.blog-section:hover{
+    box-shadow: 0 0 10px -1px #11749e;
+}
+.blog-section h3{
+    font-size: 1.125em;
+    padding: 20px 0;
+    color:#11749e;
+    text-transform: uppercase;
+}
+.blog-section p{
+    text-align: center;
+    line-height: 1.7;
+    margin:0 10px;
+    height: 200px;
+    overflow: hidden;
+    color: #222;
+}
+.blog-img {
+    height: 280px;
+    overflow: hidden;
+}
