--- a/style/style.css
+++ b/style/style.css
@@ -259,7 +259,7 @@ nav li a:hover{
     width: 23%;/*ширина*/
     margin: 50px 5px 0 5px;/*внешний отступ*/
 }
-}
+
 .blog-section:hover{
     box-shadow: 0 0 10px -1px #11749e; /*Добавляет тень к элементу*/
 }
@@ -280,4 +280,219 @@ nav li a:hover{
 .blog-img {
     height: 300px;/*высота*/
     overflow: hidden;/*управляет отображением содержания блочного элемента, если оно целиком не помещается и выходит за область заданных размеров.*/
+}
+.quick{
+    padding: 70px 0;
+    background-color: #11749e;
+    color: #fff;
+    overflow: hidden;/*управляет отображением содержания блочного элемента, если оно целиком не помещается и выходит за область заданных размеров.*/
+}
+.quick img{
+    width: 72px;
+    height: 72px;
+    padding: 10px;
+    padding: 50px 10px;
+}
+.quick .quick-action{
+    float: left;/*расположение объекта на странице*/
+    width: 50%;
+}
+.quick-action p{
+    display: inline-block;
+    width: 70%;
+    padding: 0 10px 80px;
+    height: 60px;
+    overflow: hidden;
+    letter-spacing: 1.5px;
+    line-height: 1.8;
+}
+
+.key-feature {
+    background: url('../img/2.jpg') no-repeat;
+    background-size: cover;
+    background-attachment: fixed;/*будет ли прокручиваться фоновое изображение вместе с содержимым элемента*/
+    height: 850px;
+    width: 100%;
+    color: #fff;
+}
+
+.key-feature .text{
+    margin-top: 20%;
+    width:40%;
+}
+.key-feature h2{
+    font-size: 1.5625em;
+    padding-bottom: 30px;
+    text-transform: uppercase;
+}
+.key-feature p{
+    line-height: 1.6;
+}
+.key-feature img{
+    padding-top: 15%;
+    padding-left: 20%;
+}
+.key-link {
+    margin-top: 40px;
+}
+.key-link a{
+    color: #fff;
+    background-color: #11749e;
+    padding: 10px 150px 10px 20px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: inherit;/*наследовать значение свойства у родительского элемента*/
+    width: 50%;
+}
+.key-link a:nth-child(2) {
+    width: 60%;
+}
+.key-link a:nth-child(3) {
+    width: 70%;
+}
+.key-link a:hover{
+    filter: opacity(0.7);
+}
+
+.our-team{
+    text-align: center;
+    padding-top: 200px;
+    background-color: #fff;
+    height:850px;
+}
+
+.our-team .heading h2 {
+    margin: -180px 0 100px 0;
+}
+.our-team .heading h3 {
+    font-size: 2.1875em;
+    font-stretch: condensed;/*Устанавливает узкое, нормальное или широкое начертание шрифта, что позволяет уплотнять или расширять текст.*/
+    letter-spacing: 2px;
+    padding: 2% 1% 0 1%;
+}
+.team-section {
+    float: left;
+    width: 24%;
+    margin-top: 50px;
+    margin-right: 10px;
+}
+.team-section:last-child {
+    margin-right: 0;
+}
+.team-img {
+    height: 410px;
+    overflow: hidden;
+}
+.team-img img{
+    left: -40px;
+    position: relative;
+}
+.team-section:nth-child(2) img{
+    left: -60px;
+    top: -60px;
+}
+
+.team-txt {
+    background-color:#fff;
+    position: relative;
+    top: -40px;
+    width: 80%;
+    margin: 0 auto;
+}
+.team-section h4 {
+    font-size: 1.25em;
+    padding: 20px 0 10px 0;
+    color: #11749e;
+    text-transform: uppercase;
+}
+.team-section p{
+    font-weight: bold;
+}
+
+.contacts{
+    background: url('../img/3.jpg') no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 820px;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    padding-top:50px;
+}
+form{
+    margin-top: 50px;
+}
+.contacts .heading h2{
+    margin: -185px 0 115px 0;
+}
+.contacts textarea{
+    margin: 0 auto;
+    display: block;
+    width:96%;
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding:20px;
+    color: #fff;
+    font-weight: bold;
+}
+.contacts .form input {
+    padding: 15px 20px;
+    background-color: transparent;
+    width:100%;
+    border: 1px solid #fff;
+    margin-right: 30px;
+    color: #fff;
+}
+.contacts .form input:last-child {
+    margin-right: 0;
+}
+.form{
+    display: flex;
+    justify-content: space-between;/*Работает только с флекс распределяет пространство вокруг флекс-элементов*/
+    margin-bottom: 40px;
+}
+.form input:focus, textarea:focus {
+    outline: none;
+    border: 1px solid #11749e;
+}
+.submit{
+    color: #fff;
+    background-color: #11749e;
+    font-size: 1.5em;
+    padding: 20px 60px;
+    margin-top: 40px;
+    border:none;
+    cursor: pointer;
+}
+
+
+.map-box{
+    width:100%;
+    height: 400px;
+    overflow: hidden;
+}
+.map {
+    background-size: cover;
+    width:100%;
+    height: 100%;
+    padding: 10px;
+    margin-top: -10px;
+}
+.map iframe{
+    width: 100%;
+}
+footer{
+    background-color: #222;
+    color: #fff;
+    overflow: hidden;
+    padding: 50px 0;
+}
+footer .container {
+    position: relative;
+}
+footer .right img{
+    position:absolute;
+    right: 0;
+    top: -10px;
 }
